dfir_rs/tests/compile-fail-stable/surface_singleton_nostate.rs
../compile-fail/surface_singleton_nostate.rs